--- a/CursoCssGrid/index.html
+++ b/CursoCssGrid/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <main4>
+        <div class="numeros2">1</div>
+        <div class="numeros2">2</div>
+        <div class="numeros2">3</div>
+        <div class="numeros2">4</div>
+        <div class="numeros2">5</div>
+        <div class="numeros2">6</div>
+        <div class="numeros2">7</div>
+        <div class="numeros2">8</div>
+        <div class="numeros2">9</div>
+    </main4>
+    <main3>
+        <div class="numeros">1</div>
+        <div class="numeros">2</div>
+        <div class="numeros">3</div>
+        <div class="numeros">4</div>
+        <div class="numeros">5</div>
+        <div class="numeros">6</div>
+        <div class="numeros">7</div>
+        <div class="numeros">8</div>
+        <div class="numeros">9</div>
+    </main3>
     <main>
         <header>Header</header>
         <div class="login">login</div>
