--- a/CursoCssGrid/index.html
+++ b/CursoCssGrid/index.html
@@ -8,53 +8,15 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <main5>
-        <div class="numeros3">1</div>
-        <div class="numeros3">2</div>
-        <div class="numeros3">3</div>
-        <div class="numeros3">4</div>
-        <div class="numeros3">5</div>
-        <div class="numeros3">6</div>
-        <div class="numeros3">7</div>
-        <div class="numeros3">8</div>
-        <div class="numeros3">9</div>
-    </main5>
-    <main4>
-        <div class="numeros2">1</div>
-        <div class="numeros2">2</div>
-        <div class="numeros2">3</div>
-        <div class="numeros2">4</div>
-        <div class="numeros2">5</div>
-        <div class="numeros2">6</div>
-        <div class="numeros2">7</div>
-        <div class="numeros2">8</div>
-        <div class="numeros2">9</div>
-    </main4>
-    <main3>
-        <div class="numeros">1</div>
-        <div class="numeros">2</div>
-        <div class="numeros">3</div>
-        <div class="numeros">4</div>
-        <div class="numeros">5</div>
-        <div class="numeros">6</div>
-        <div class="numeros">7</div>
-        <div class="numeros">8</div>
-        <div class="numeros">9</div>
-    </main3>
-    <main>
-        <header>Header</header>
-        <div class="login">login</div>
-        <aside>izquierda</aside>
-        <article>contenido</article>
-        <aside>derecha</aside>
-        <footer>footer</footer>
-    </main>
-    <main2>
-        <header>Header</header>
-        <aside>izquierda</aside>
-        <article>contenido</article>
-        <aside>derecha</aside>
-        <footer>footer</footer>
-    </main2>
+    <main9>
+        <div>Contenido 01</div>
+        <div>Contenido 02</div>
+        <div>Contenido 03</div>
+        <div>Contenido 04</div>
+        <div>Contenido 05</div>
+        <div>Contenido 06</div>
+        <div>Contenido 07</div>
+        <div>Contenido 08</div>
+    </main9>
 </body>
 </html>
