--- a/CursoCssGrid/index.html
+++ b/CursoCssGrid/index.html
@@ -8,15 +8,11 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <main9>
-        <div>Contenido 01</div>
-        <div>Contenido 02</div>
-        <div>Contenido 03</div>
-        <div>Contenido 04</div>
-        <div>Contenido 05</div>
-        <div>Contenido 06</div>
-        <div>Contenido 07</div>
-        <div>Contenido 08</div>
-    </main9>
+    <main11 class="auto-fill">
+        <div class="numero11">Contenido 01</div>
+        <div class="numero11">Contenido 02</div>
+        <div class="numero11">Contenido 03</div>
+        <div class="numero11">Contenido 04</div>
+    </main11>
 </body>
 </html>
