--- a/CursoCssGrid/indexAnt.html
+++ b/CursoCssGrid/indexAnt.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <main10>
+        <div class="primero">Contenido 01</div>
+        <div>Contenido 02</div>
+        <div>Contenido 03</div>
+        <div>Contenido 04</div>
+        <div>Contenido 05</div>
+        <div>Contenido 06</div>
+        <div>Contenido 07</div>
+        <div>Contenido 08</div>
+    </main10>
+    <main9>
+        <div>Contenido 01</div>
+        <div>Contenido 02</div>
+        <div>Contenido 03</div>
+        <div>Contenido 04</div>
+        <div>Contenido 05</div>
+        <div>Contenido 06</div>
+        <div>Contenido 07</div>
+        <div>Contenido 08</div>
+    </main9>
     <main8>
         <header class="cabecera8">Header</header>
         <aside class="izquierda8">Sidebar</aside>
