--- a/CursoCssGrid/index.html
+++ b/CursoCssGrid/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <main11 class="auto-fill">
-        <div class="numero11">Contenido 01</div>
-        <div class="numero11">Contenido 02</div>
-        <div class="numero11">Contenido 03</div>
-        <div class="numero11">Contenido 04</div>
-    </main11>
+    <main12 class="auto-fit">
+        <div class="numero12">Contenido 01</div>
+        <div class="numero12">Contenido 02</div>
+        <div class="numero12">Contenido 03</div>
+        <div class="numero12">Contenido 04</div>
+    </main12>
+    <main12 class="auto-fill">
+        <div class="numero12">Contenido 01</div>
+        <div class="numero12">Contenido 02</div>
+        <div class="numero12">Contenido 03</div>
+        <div class="numero12">Contenido 04</div>
+    </main12>
 </body>
 </html>
