--- a/CursoCssGrid/indexAnt.html
+++ b/CursoCssGrid/indexAnt.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <main11 class="auto-fit">
+        <div class="numero11">Contenido 01</div>
+        <div class="numero11">Contenido 02</div>
+        <div class="numero11">Contenido 03</div>
+        <div class="numero11">Contenido 04</div>
+    </main11>
+    <main11 class="auto-fill">
+        <div class="numero11">Contenido 01</div>
+        <div class="numero11">Contenido 02</div>
+        <div class="numero11">Contenido 03</div>
+        <div class="numero11">Contenido 04</div>
+    </main11>
     <main10>
         <div class="primero">Contenido 01</div>
         <div>Contenido 02</div>
