--- a/CursoCssGrid/index.html
+++ b/CursoCssGrid/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <main12 class="auto-fit">
+    <main12>
         <div class="numero12">Contenido 01</div>
         <div class="numero12">Contenido 02</div>
         <div class="numero12">Contenido 03</div>
         <div class="numero12">Contenido 04</div>
-    </main12>
-    <main12 class="auto-fill">
-        <div class="numero12">Contenido 01</div>
-        <div class="numero12">Contenido 02</div>
-        <div class="numero12">Contenido 03</div>
-        <div class="numero12">Contenido 04</div>
+        <div class="numero12">Contenido 05</div>
+        <div class="numero12">Contenido 06</div>
+        <div class="numero12">Contenido 07</div>
+        <div class="numero12">Contenido 08</div>
+        <div class="numero12">Contenido 09</div>
+        <div class="numero12">Contenido 10</div>
+        <div class="numero12">Contenido 11</div>
+        <div class="numero12">Contenido 12</div>
     </main12>
 </body>
 </html>
