--- a/CursoCssGrid/indexAnt.html
+++ b/CursoCssGrid/indexAnt.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <main13>
+        <div class="numero13">Contenido 01</div>
+        <div class="numero13">Contenido 02</div>
+        <div class="numero13">Contenido 03</div>
+        <div class="numero13">Contenido 04</div>
+    </main13>
+    <main12>
+        <div class="numero12">Contenido 01</div>
+        <div class="numero12">Contenido 02</div>
+        <div class="numero12">Contenido 03</div>
+        <div class="numero12">Contenido 04</div>
+        <div class="numero12">Contenido 05</div>
+        <div class="numero12">Contenido 06</div>
+        <div class="numero12">Contenido 07</div>
+        <div class="numero12">Contenido 08</div>
+        <div class="numero12">Contenido 09</div>
+        <div class="numero12">Contenido 10</div>
+        <div class="numero12">Contenido 11</div>
+        <div class="numero12">Contenido 12</div>
+    </main12>
     <main11 class="auto-fit">
         <div class="numero11">Contenido 01</div>
         <div class="numero11">Contenido 02</div>
