agregando avances del curso

--- a/CursoCssGrid/index.html
+++ b/CursoCssGrid/index.html
@@ -8,21 +8,13 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <main14>
-        <div class="numero14">01</div>
-        <div class="numero14">02</div>
-        <div class="numero14">03</div>
-        <div class="numero14">
-            <main15>
-                <div class="numero15">01</div>
-                <div class="numero15">02</div>
-                <div class="numero15">03</div>
-                <div class="numero15">04</div>
-                <div class="numero15">05</div>
-            </main15>
-        </div>
-        <div class="numero14">04</div>
-        <div class="numero14">05</div>
-    </main14>
+    <main16>
+        <header>Header</header>
+        <aside class="cIzquierda">Izquierda</aside>
+        <article>Contenido</article>
+        <aside class="cDerecha1">Derecha 1</aside>
+        <aside class="cDerecha2">Derecha 2</aside>
+        <footer>footer</footer>
+    </main16>
 </body>
 </html>
