--- a/CursoCssGrid/indexAnt.html
+++ b/CursoCssGrid/indexAnt.html
@@ -8,6 +8,42 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <main18>
+        <div>Contenido 01</div>
+        <div>Contenido 02</div>
+        <div>Contenido 03</div>
+        <div>Contenido 04</div>
+        <div>Contenido 05</div>
+        <div>Contenido 06</div>
+        <div>Contenido 07</div>
+        <div>Contenido 08</div>
+        <div>Contenido 09</div>
+        <div>Contenido 10</div>
+        <div>Contenido 11</div>
+        <div>Contenido 12</div>
+    </main18>
+    <main17>
+        <div>Contenido 01</div>
+        <div>Contenido 02</div>
+        <div>Contenido 03</div>
+        <div>Contenido 04</div>
+        <div>Contenido 05</div>
+        <div>Contenido 06</div>
+        <div>Contenido 07</div>
+        <div>Contenido 08</div>
+        <div>Contenido 09</div>
+        <div>Contenido 10</div>
+        <div>Contenido 11</div>
+        <div>Contenido 12</div>
+    </main17>
+    <main16>
+        <header>Header</header>
+        <aside class="cIzquierda">Izquierda</aside>
+        <article>Contenido</article>
+        <aside class="cDerecha1">Derecha 1</aside>
+        <aside class="cDerecha2">Derecha 2</aside>
+        <footer>footer</footer>
+    </main16>
     <main13>
         <div class="numero13">Contenido 01</div>
         <div class="numero13">Contenido 02</div>
