--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 
-    <section id="cont1" class="container">
+    <section class="container">
         <div class="item item1">#1</div>
-        <div class="item item22">#2</div>
+        <div class="item item2">#2</div>
         <div class="item item3">#3</div>
         <div class="item item4">#4</div>
     </section>
+    
 </body>
 </html>
